#910 Fix incorrect product option combinations due to partial slug matching